--- a/NodejsConsoleApp1/package.json
+++ b/NodejsConsoleApp1/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/frida-gum": "^18.1.0",
     "@types/node": "^18.0.6",
+    "eslint": "^8.55.0",
     "frida-compile": "^15.0.8"
   }
 }
