--- a/AgentTypescript/package.json
+++ b/AgentTypescript/package.json
@@ -6,8 +6,8 @@
   "main": "agent/index.ts",
   "scripts": {
     "prepare": "npm run build",
-    "build": "frida-compile agent/index.ts -o _agent.js -c",
-    "watch": "frida-compile agent/index.ts -o _agent.js -w"
+    "build": "frida-compile -S agent/index.ts -o _agent.js -c",
+    "watch": "frida-compile -S agent/index.ts -o _agent.js -w"
   },
   "devDependencies": {
     "@types/frida-gum": "^18.1.0",
