--- a/nativehook/nativehook.vcxproj.filters
+++ b/nativehook/nativehook.vcxproj.filters
@@ -2,9 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="nativehook.cpp" />
+    <ClCompile Include="json.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="nativehook.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="json.h" />
   </ItemGroup>
 </Project>
